--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="EventSystem\ODefines.hpp" />
     <ClInclude Include="Events\KeyboardEvent.hpp" />
     <ClInclude Include="Events\MouseEvents.h" />
+    <ClInclude Include="Components\ParticleComponent.hpp" />
     <ClInclude Include="Events\UISelectEvent.hpp" />
     <ClInclude Include="Events\UpdateEvent.hpp" />
     <ClInclude Include="FileSystem\ImagePreloadingMapper.hpp" />
