--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -91,7 +91,7 @@
     <ClCompile Include="AudioSystem\AudioFile.cpp" />
     <ClCompile Include="AudioSystem\AudioSystem.cpp" />
     <ClCompile Include="Components\Component.cpp" />
-    <ClCompile Include="Components\MenuManagerComponent.cpp" />
+    <ClCompile Include="Components\MenuComponent.cpp" />
     <ClCompile Include="Components\RigidBodyComponent.cpp" />
     <ClCompile Include="Components\SoundEmitterComponent.cpp" />
     <ClCompile Include="Components\SpriteComponent.cpp" />
@@ -126,7 +126,7 @@
     <ClInclude Include="AudioSystem\AudioFile.hpp" />
     <ClInclude Include="AudioSystem\AudioSystem.hpp" />
     <ClInclude Include="Components\Component.hpp" />
-    <ClInclude Include="Components\MenuManagerComponent.hpp" />
+    <ClInclude Include="Components\MenuComponent.hpp" />
     <ClInclude Include="Components\RigidBodyComponent.hpp" />
     <ClInclude Include="Components\SoundEmitterComponent.hpp" />
     <ClInclude Include="Components\SpriteComponent.hpp" />
@@ -191,7 +191,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Components\MenuManagerComponent.tpp" />
+    <None Include="Components\MenuComponent.tpp" />
     <None Include="Components\SoundEmitterComponent.tpp" />
     <None Include="EventSystem\DelegateGlobalFunction.tpp" />
     <None Include="EventSystem\DelegateMemberFunction.tpp" />
