--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClCompile Include="EventSystem\EventCarrier.cpp" />
     <ClCompile Include="Particles\ParticleBuffer.cpp" />
     <ClCompile Include="Components\MenuComponent.cpp" />
+    <ClCompile Include="Components\PlayerManagerComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioSystem\AudioDefines.hpp" />
@@ -74,6 +75,8 @@
     <ClInclude Include="Particles\ParticleBuffer.h" />
     <ClInclude Include="EventSystem\EventCarrier.hpp" />
     <ClInclude Include="Components\ParticleComponent.hpp" />
+    <ClInclude Include="Events\UIChangeEvent.hpp" />
+    <ClInclude Include="Components\PlayerManagerComponent.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Components\SoundEmitterComponent.tpp" />
