--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="Particles\ParticleBuffer.cpp" />
     <ClCompile Include="Components\MenuComponent.cpp" />
     <ClCompile Include="Components\PlayerManagerComponent.cpp" />
+    <ClCompile Include="Components\ParticleComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioSystem\AudioDefines.hpp" />
