--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClCompile Include="Components\PlayerManagerComponent.cpp" />
     <ClCompile Include="GameEngine\MenuManager.cpp" />
     <ClCompile Include="Components\ParticleComponent.cpp" />
+    <ClCompile Include="GameEngine\Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioSystem\AudioDefines.hpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="GameEngine\MenuManager.hpp" />
     <ClInclude Include="Events\QuitRequestEvent.hpp" />
     <ClInclude Include="Events\GameStartEvent.hpp" />
+    <ClInclude Include="GameEngine\Utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Components\SoundEmitterComponent.tpp" />
