--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -84,6 +84,7 @@
     <ClInclude Include="Events\QuitRequestEvent.hpp" />
     <ClInclude Include="Events\GameStartEvent.hpp" />
     <ClInclude Include="GameEngine\Utilities.hpp" />
+    <ClInclude Include="Events\PauseToggleEvent.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Components\SoundEmitterComponent.tpp" />
