--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Components\ParticleComponent.hpp" />
     <ClInclude Include="Events\PauseToggleEvent.hpp" />
     <ClInclude Include="Events\QuitRequestEvent.hpp" />
+    <ClInclude Include="Events\SwitchEvent.hpp" />
     <ClInclude Include="Events\UIChangeEvent.hpp" />
     <ClInclude Include="Events\UISelectEvent.hpp" />
     <ClInclude Include="Events\UpdateEvent.hpp" />
