--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClInclude Include="GameEngine\Utilities.hpp" />
     <ClInclude Include="Events\PauseToggleEvent.hpp" />
     <ClInclude Include="Events\CollisionEvent.hpp" />
+    <ClInclude Include="Events\SwitchEvent.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Components\SoundEmitterComponent.tpp" />
